--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,133 @@
-.App {
-  text-align: center;
-}
+/* Universal Section */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+html {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-size: 16px;
+  background-color: black;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App {
+  background-color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+/* Header Section */
+
+.headerContainer {
+  text-align: center;
+  background-color: black;
+  color: white;
+  border-bottom: 1px solid white;
 }
+
+.headerContainer h1 {
+  padding: 20px 0;
+  font-family: cursive;
+  cursor: pointer;
+}
+
+.headerContainer p {
+  text-align: right;
+  padding-right: 15px;
+  cursor: pointer;
+  
+}
+
+/*Login Section */
+
+.Login {
+  display: flex;
+  justify-content: end;
+  
+}
+
+/* Category Section */
+
+.categoryTitle {
+  background-color: black;
+  text-align: center;
+  color: white;
+  padding-top: 25px;
+
+}
+
+.categoryList {
+  background-color: black;
+  display: flex;
+  justify-content:space-around;
+  list-style: none;
+  margin-top: 50px;
+ 
+}
+
+.categoryList li:hover {
+  cursor: pointer;
+  transform: scale(2);
+
+}
+
+
+/* movie Section */
+
+
+
+.categoryTitle {
+  color: white;
+  margin: 40px 0;
+}
+
+.movieContainer {
+  white-space: nowrap;
+  overflow: scroll;
+}
+
+.movieRow {
+  display: inline-flex;
+  overflow:scroll;
+  white-space: nowrap;
+}
+
+.movieImg :hover{
+ transform: scale(1.1);
+ cursor: pointer;
+}
+
+.img-div {
+  margin: 0 10px;
+  cursor: pointer;
+}
+
+.movieImg {
+  border: 2px solid white;
+  border-radius: 25px;
+  height: 400px;
+}
+
+/* Movie Info Page */
+
+.movieInfo-wrapper {
+  margin: 0 auto;
+  background-color: white;
+  width: 80%;
+  border: 3px solid gray;
+  border-radius: 25px;
+  z-index: 100;
+  position: absolute;
+  top: 20%;
+  left: 12%;
+  
+}
+
+.movieInfo-wrapper img {
+  border-radius: 25px;
+  padding: 10px;
+}
+
+.movieInfo-wrapper h3 {
+  padding: 5px 5px 0 0 ;
+  cursor: pointer;
+}
+
