--- a/src/App.css
+++ b/src/App.css
@@ -21,18 +21,26 @@ html {
   background-color: black;
   color: white;
   border-bottom: 1px solid white;
+  display: flex;
+  
+  
 }
 
 .headerContainer h1 {
   padding: 20px 0;
   font-family: cursive;
-  cursor: pointer;
+  width: 80%;
+  text-align: left;
+  padding-left: 15px;
 }
 
 .headerContainer p {
   text-align: right;
   padding-right: 15px;
   cursor: pointer;
+  align-items: right;
+  width: 20%;
+
   
 }
 
@@ -41,7 +49,14 @@ html {
 .Login {
   display: flex;
   justify-content: end;
+  padding: 0 10px 10px 0;
   
+}
+
+.Login h4 {
+  cursor: pointer;
+  margin-left: 90%;
+  width: 15px;
 }
 
 /* Category Section */
@@ -111,14 +126,13 @@ html {
 .movieInfo-wrapper {
   margin: 0 auto;
   background-color: white;
-  width: 80%;
   border: 3px solid gray;
   border-radius: 25px;
   z-index: 100;
   position: absolute;
-  top: 20%;
-  left: 12%;
-  
+  top: 1%;
+  left: 6%;
+  font-size: 1.75vw;
 }
 
 .movieInfo-wrapper img {
