added login page

--- a/src/App.css
+++ b/src/App.css
@@ -145,3 +145,16 @@ html {
   cursor: pointer;
 }
 
+/* Admin Page */
+
+.adminList {
+  color: white;
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  padding-top: 15px;
+}
+
+.adminList li {
+  cursor: pointer;
+}
