--- a/src/App.css
+++ b/src/App.css
@@ -143,6 +143,11 @@ html {
 .movieInfo-wrapper h3 {
   padding: 5px 5px 0 0 ;
   cursor: pointer;
+  
+}
+
+.movieInfo-wrapper h4 {
+  text-decoration: underline;
 }
 
 /* Admin Page */
